--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "abab",
-  "version": "2.0.0",
+  "name": "@lighthouse/abab",
+  "version": "0.0.1",
   "description": "WHATWG spec-compliant implementations of window.atob and window.btoa.",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "src/index.js",
   "files": [
-    "index.js",
-    "lib/"
+    "dist/",
+    "src/"
   ],
   "scripts": {
-    "mocha": "mocha test/node",
-    "karma": "karma start",
-    "test": "npm run lint && npm run mocha && npm run karma",
-    "lint": "eslint ."
+    "build": "yarn clear && NODE_ENV=production parcel build src/index.js",
+    "clear": "rimraf dist",
+    "lint": "eslint src",
+    "test": "jest test",
+    "test:ci": "yarn lint && yarn test -- --coverage"
   },
   "repository": {
     "type": "git",
@@ -19,23 +21,22 @@
   },
   "keywords": [
     "atob",
-    "btoa",
-    "browser"
+    "btoa"
   ],
-  "author": "Jeff Carpenter <gcarpenterv@gmail.com>",
   "license": "SEE LICENSE IN LICENSE.md",
   "bugs": {
     "url": "https://github.com/jsdom/abab/issues"
   },
   "homepage": "https://github.com/jsdom/abab#readme",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.4.2",
+    "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.1",
-    "karma": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-mocha": "^1.3.0",
-    "karma-webpack": "^3.0.0",
+    "jest": "^23.5.0",
+    "jest-junit-reporter": "^1.1.0",
     "mocha": "^5.1.0",
-    "webpack": "^4.5.0"
+    "parcel-bundler": "^1.9.7",
+    "rimraf": "^2.6.2"
   }
 }
