--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jsdom/abab.git"
+    "url": "git+https://github.com/Lighthouse-io/abab"
   },
   "keywords": [
     "atob",
@@ -27,9 +27,9 @@
   ],
   "license": "SEE LICENSE IN LICENSE.md",
   "bugs": {
-    "url": "https://github.com/jsdom/abab/issues"
+    "url": "https://github.com/Lighthouse-io/abab"
   },
-  "homepage": "https://github.com/jsdom/abab#readme",
+  "homepage": "https://github.com/Lighthouse-io/abab#readme",
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-jest": "^23.4.2",
@@ -37,7 +37,6 @@
     "eslint": "^4.19.1",
     "jest": "^23.5.0",
     "jest-junit-reporter": "^1.1.0",
-    "mocha": "^5.1.0",
     "parcel-bundler": "^1.9.7",
     "rimraf": "^2.6.2"
   }
