--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dist/"
   ],
   "scripts": {
-    "build": "yarn clear && NODE_ENV=production parcel build src/index.js",
+    "build": "yarn clear && babel src --out-dir dist/ --source-maps",
     "clear": "rimraf dist",
     "lint": "eslint src",
     "prepublish": "yarn build",
@@ -29,13 +29,13 @@
   },
   "homepage": "https://github.com/Lighthouse-io/abab#readme",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-jest": "^23.4.2",
     "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.1",
     "jest": "^23.5.0",
     "jest-junit-reporter": "^1.1.0",
-    "parcel-bundler": "^1.9.7",
     "rimraf": "^2.6.2"
   }
 }
